# ember

./: .gitignore  Cargo.toml  README.md  gpu.txt  instancing.txt  rendergraph.txt  rustfmt.toml  t.txt  tmp.out
engine/: Cargo.toml
engine/src/: components.rs  constants.rs  lib.rs
engine/src/render/: graph.rs  node.rs  texture.rs
engine/src/render/uniform/: generic.rs  group.rs  mod.rs
engine/src/renderer/: buffer.rs  graph.rs  instance.rs  mesh.rs  mod.rs  node.rs  target.rs
engine/src/renderer/buffer/: instance.rs  mod.rs  target.rs  texture.rs
engine/src/renderer/graph/: mod.rs  node.rs  target.rs
engine/src/renderer/shaders/: automata.wgsl  channelpass.wgsl  pbr.wgsl  render_2d.wgsl  render_2d_instance.wgsl  render_3d.wgsl  sky.wgsl
engine/src/renderer/shaders/templates/: channel.wgsl
engine/src/renderer/systems/: bounce.rs  chain.rs  channel.rs  graph.rs  mod.rs  quad.rs  sky.rs  ui.rs
engine/src/renderer/systems/render_2d/: forward_basic.rs  forward_dynamic.rs  forward_instance.rs  mod.rs
engine/src/renderer/systems/render_3d/: forward_basic.rs  forward_pbr.rs  mod.rs
engine/src/renderer/systems/ui/: iced.rs  imgui.rs  mod.rs
engine/src/renderer/uniform/: generic.rs  group.rs  instance.rs  mod.rs
engine/src/resource/: camera.rs  schedule.rs  store.rs  ui.rs
engine/src/sources/: camera.rs  group.rs  metrics.rs  mod.rs  primitives.rs  registry.rs  schedule.rs  store.rs  ui.rs
engine/src/sources/static/: chair_fix.mtl  creeper.mtl
engine/src/sources/ui/: iced.rs  imgui.rs
engine/src/system/: base_2d.rs  camera_2d.rs  lighting_2d.rs  mod.rs  render_2d.rs  render_graph.rs
engine/src/system/render_2d/: forward_dynamic.rs  forward_instance.rs  mod.rs
engine/src/systems/: camera_2d.rs  camera_3d.rs  lighting_2d.rs  mod.rs  particle_2d.rs  physics_2d.rs  physics_3d.rs
env_irradiance/: Cargo.toml
env_irradiance/src/: main.rs
examples/example0/: Cargo.toml
examples/example0/src/: main.rs
examples/example1/: Cargo.toml
examples/example1/src/: main.rs
examples/example2/: Cargo.toml
examples/example2/src/: main.rs
examples/example3/: Cargo.toml
examples/example3/src/: fractal.wgsl  main.rs  shader.wgsl
examples/example4/: Cargo.toml
examples/example5/: Cargo.toml
src/: component.rs  constants.rs  lib.rs  main.rs
src/render/: buffer.rs  graph.rs  mod.rs  node.rs  pipeline.rs  shader.rs  texture.rs  uniform.rs
src/resource/: metrics.rs  mod.rs  schedule.rs  store.rs  ui.rs
src/resources/: camera.rs  mod.rs  store.rs  ui.rs
src/system/: base_2d.rs  camera_2d.rs  lighting_2d.rs  mod.rs  render_2d.rs  render_graph.rs  render_ui.rs
src/systems/: base_2d.rs  camera_2d.rs  lighting_2d.rs  mod.rs  physics_2d.rs  render_2d.rs
vertex_layout_derive/: Cargo.toml
vertex_layout_derive/src/: lib.rs
vertex_traits/: Cargo.toml
vertex_traits/src/: lib.rs
(+3 files in other folders)
