[package]
name = "zmb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
image = "*"
legion = "0.4.0"
log = "0.4"
futures = "0.3"
pretty_env_logger = "0.3"
rand = "0.8.4"
wgpu = "0.9"
winit = "0.25"
winit_input_helper = "0.10"
