[package]
name = "ember"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
image = "*"
imgui = "0.7"
imgui-wgpu = "0.16"
imgui-winit-support = { version = "0.7.1", default-features = false, features = ["winit-25"] }
legion = "0.4.0"
log = "0.4"
futures = "0.3"
pretty_env_logger = "0.3"
rand = "0.8.4"
regex = "1.5"
wgpu = "0.9"
winit = "0.25"
winit_input_helper = "0.10"
