[package]
name = "ember"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
derive_more = "0.99.16"
futures = "0.3"
iced = { git = "https://github.com/iced-rs/iced" }
iced_wgpu = { git = "https://github.com/iced-rs/iced" }
iced_winit = { git = "https://github.com/iced-rs/iced" }
image = "*"
# imgui = { version = "0.8.1-alpha.0", git = "https://github.com/rishabh-bector/imgui-rs", branch = "winit-0.26-default" }
# imgui-wgpu = "0.19.0"
# imgui-winit-support = { git = "https://github.com/rishabh-bector/imgui-rs", branch = "winit-0.26-default", version = "0.8.1-alpha.0", default-features = false, features = [
#     "winit-26",
# ] }
pretty_env_logger = "0.3"
rand = "0.8.4"
raw-window-handle = "0.4"
rayon = "1.5"
regex = "1.5"
legion = "0.4.0" 
log = "0.4"
once_cell = "1.8.0"
tobj = "3.1"
uuid = "0.8"
vertex_traits = { path = "../vertex_traits" }
vertex_layout_derive = { path = "../vertex_layout_derive" }
wgpu = "0.12"
winit_input_helper = { path = "../../winit_input_helper" }
